Fixed min height issues for message input box on mobile devices
On mobile devices or screens with large heights, the message input box was traveling up the screen due to a min-height issue on the message container

--- a/Stylesheets/style.scss
+++ b/Stylesheets/style.scss
@@ -173,9 +173,9 @@ $trans: 250ms ease-in-out;
         display: flex;
         flex-direction: column-reverse;
         width: 100%;
-        max-height: 600px;
-        min-height: 0px;
-        height: 600px;
+        // max-height: 600px;
+        // min-height: 0px;
+        height: 100%;
         margin: 0 auto;
         z-index: -1;
         overflow-y: auto;
